# PhantomGPU

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Gaming_Accuracy_Enhancement_Summary.md  LICENSE  README.md  game_profiles.toml  gpu_models.toml  hardware_profiles.toml  real_hardware_profiles.toml
benchmark_data/: edge_cases.json  gaming_benchmarks.json  gaming_edge_cases.json  reference_benchmarks.json
docs/: DEEP_DIVE_STUDY_GUIDE.md  GAMING.md  IDEAS.md  ROADMAP.md  V100_OPTIMIZATION_STATUS.md
scripts/: analyze_tensorflow.py  convert_to_tflite.py
src/: batch_optimizer.rs  benchmark_validation.rs  benchmarks.rs  bottleneck_analysis.rs  candle_integration.rs  cli.rs  cloud_cost_estimator.rs  commands.rs  emulator.rs  errors.rs  gaming_accuracy_test.rs  gaming_benchmark_calibrator.rs  gaming_performance.rs  gaming_power.rs  gaming_thermal.rs  gpu_config.rs  main.rs  metrics.rs  model_benchmarks.rs  model_comparison.rs  model_loader.rs  models.rs  neural_network_demo.rs  power_modeling.rs  pytorch_integration.rs  real_hardware_config.rs  real_hardware_model.rs  real_model_loader.rs  tensorflow_parser.rs  thermal_modeling.rs  unified_gaming_emulator.rs
